[project]
name = "bitbucket-mcp"
version = "0.1.0"
description = "Bitbucket Cloud MCP server for Claude - tech lead PR workflow"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
]

[project.scripts]
bitbucket-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
